Modified styling to stop bottom navigation covering content

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,5 @@ $color-primary-main:#004B8D;
 $color-primary-light:#3CA5D5;
 $color-primary-dark:#00254A;
 $color-secondary-main:#F2A900;
+
+$bottom-nav-height:56px;
